// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`favorite DELETE /api/articles/:slug/favorite with a logged in user and an invalid slug should return a 404 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "data": null,
      "isBoom": true,
      "isServer": false,
      "message": "Not Found",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Not Found",
          "message": "Not Found",
          "statusCode": 404,
        },
        "statusCode": 404,
      },
    },
    "message": "Not Found",
  },
}
`;

exports[`favorite DELETE /api/articles/:slug/favorite without a logged in user should return a 401 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "code": "credentials_required",
      "data": Object {
        "UnauthorizedError": Array [
          "No authorization token was found",
        ],
      },
      "inner": Object {
        "message": "No authorization token was found",
      },
      "isBoom": true,
      "isServer": false,
      "message": "No authorization token was found",
      "name": "UnauthorizedError",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Unauthorized",
          "message": "No authorization token was found",
          "statusCode": 401,
        },
        "statusCode": 401,
      },
      "status": 401,
    },
    "message": "No authorization token was found",
  },
}
`;

exports[`favorite POST /api/articles/:slug/favorite with a logged in user and an invalid slug should return a 404 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "data": null,
      "isBoom": true,
      "isServer": false,
      "message": "Not Found",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Not Found",
          "message": "Not Found",
          "statusCode": 404,
        },
        "statusCode": 404,
      },
    },
    "message": "Not Found",
  },
}
`;

exports[`favorite POST /api/articles/:slug/favorite without a logged in user should return a 401 1`] = `
Object {
  "errors": Object {
    "error": Object {
      "code": "credentials_required",
      "data": Object {
        "UnauthorizedError": Array [
          "No authorization token was found",
        ],
      },
      "inner": Object {
        "message": "No authorization token was found",
      },
      "isBoom": true,
      "isServer": false,
      "message": "No authorization token was found",
      "name": "UnauthorizedError",
      "output": Object {
        "headers": Object {},
        "payload": Object {
          "error": "Unauthorized",
          "message": "No authorization token was found",
          "statusCode": 401,
        },
        "statusCode": 401,
      },
      "status": 401,
    },
    "message": "No authorization token was found",
  },
}
`;
